Add docs.go to codecov ignore list
The file ./docs/docs.go was added to the ignore list in codecov.yml to prevent it from being included in coverage reports. This change ensures more accurate coverage statistics by excluding documentation-related files.

--- a/codecov.yml
+++ b/codecov.yml
@@ -2,4 +2,5 @@ ignore:
   - "main.go"
   - "**/mock_*"
   - "**/wire.go"
-  - "**/wire-gen.go"# glob accepted
+  - "**/wire-gen.go"
+  - "./docs/docs.go"
